# nowthenews

./: .gitignore  CLAUDE.md  ISSUES.md  config.json  docker-compose.observability.yml  pyproject.toml
newschat/: config.py  db.py  email.py  models.py
newschat/enrich/: llm.py  pipeline.py  prompt.py  schema.py
newschat/ingest/: coordinator.py  guardian.py  loader.py
newschat/mcp/: server.py
observability/: grafana-datasources.yml  loki.yml  promtail.yml
scripts/: backfill_liveblog_blocks.py  benchmark_compare.py  benchmark_run.py  enrich_coordinator.py  enrich_once.py  enrichment_watchdog.py  ingest_and_enrich.py  ingest_once.py  init.sh  setup_all.sh  setup_db.py  setup_observability.sh  setup_ollama.sh  start_observability.sh  stop_observability.sh
tests/: test_enrich.py  test_guardian.py  test_loader.py  test_models.py
web/api/: main.py
web/frontend/: package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.css  App.tsx
web/frontend/src/api/: client.ts
web/frontend/src/components/: ArticlePanel.tsx  FilterBar.tsx
web/frontend/src/context/: FilterContext.tsx
web/frontend/src/utils/: export.ts
web/frontend/src/views/: AlertsView.tsx  CompareView.tsx  DashboardView.tsx  GeoView.tsx  GraphView.tsx  HeatmapView.tsx  RiverView.tsx  SearchView.tsx  TimelineView.tsx  WordCloudView.tsx
