# Package: newschat | Repository: nowthenews
[project]
name = "newschat"
version = "0.1.0"
description = "News ingestion, enrichment, and query system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "clickhouse-connect>=0.7,<1",
    "python-dotenv>=1.0,<2",
    "beautifulsoup4>=4.12,<5",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
mcp = ["fastmcp>=0.1"]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
include = ["newschat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
